[tool.poetry]
name = "dataoxautoriaproj"
version = "0.1.0"
description = ""
authors = ["KittGT42 <114111458+KittGT42@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
selenium = "^4.21.0"
pandas = "^2.2.2"
openpyxl = "^3.1.3"
psycopg2 = "^2.9.9"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
